# workshop1

./: CMakeLists.txt  README.md
include/: cube.hpp  shader.hpp
res/shaders/: cube.frag
src/: main.cpp  shader.cpp
